# sc-testing-tools

./: .gitignore  README.md  cabal.project  flake.nix
.github/workflows/: gh-pages.yaml
docs/skill/skill-v1/: README.md  SKILL.md
docs/skill/skill-v1/references/: 00-phase-detection.md  02-project-setup.md  02-testing-interface-class.md  03-helpers-cheatsheet.md  03-testing-interface-class.md  06-threat-models.md
docs/skill/skill-v2/: SKILL.md
docs/skill/skill-v2.0.0/: SKILL.md
docs/skill/skill-v2.0.0/references/: 00-phase-detection.md  01-onboarding-blueprint.md  02-project-setup.md  05-generators-and-implementation.md  06-threat-models.md
docs/skill/skill-v2.0.1/: SKILL.md
docs/skill/skill-v2.0.1/references/: 01-onboarding-blueprint.md  04-helpers-cheatsheet.md  05-generators-and-implementation.md  06-threat-models.md
docs/skill/skill-v2.0.2/: SKILL.md
docs/skill/skill-v2.0.2/references/: 01-onboarding-blueprint.md  05-generators-and-implementation.md  06-threat-models.md
docs/skill/skill-v2.0.3/: SKILL.md
docs/skill/skill-v2.0.3/references/: 00-phase-detection.md  01-onboarding-blueprint.md  03-testing-interface-class.md  05-generators-and-implementation.md  06-threat-models.md
docs/skill/skill-v2/references/: 00-phase-detection.md  01-onboarding-blueprint.md  02-project-setup.md  04-helpers-cheatsheet.md  05-generators-and-implementation.md  06-threat-models.md
docs/skill/skill/references/: 01-project-setup.md  04-generator-precondition-perform.md  05-threat-models.md
scripts/: README.md  list-test-suites.schema.json  list-test-suites.sh  pre-fetch.sh  test-list-test-suites.sh
scripts/list-test-suites/: README.md  list-test-suites.schema.json  list-test-suites.sh  test-list-test-suites.sh
scripts/list-test-suites/testdata/: golden.tsv
scripts/list-tests/: .gitignore  README.md  list-tests.js  list-tests.schema.json  package-lock.json  package.json  test-list-tests.sh
scripts/list-tests/lib/: ast.js  extract.js  health.js  imports.js  parser.js  resolver.js  suites.js  synthesize.js
scripts/list-tests/testdata/: golden-schema-gen-plain.json  golden-schema-gen-streaming.json  golden-testing-interface.json  golden-vesting.json
scripts/testdata/: golden.tsv
src/base/lib/Convex/: Class.hs
src/coin-selection/: convex-coin-selection.cabal
src/coin-selection/lib/Convex/: CoinSelection.hs
src/coin-selection/test/: Scripts.hs  Spec.hs
src/coin-selection/test/Scripts/: PingPong.hs  Sample.hs
src/schema-gen/: convex-schema-gen.cabal
src/schema-gen/lib/Convex/: SchemaGen.hs
src/schema-gen/test-plain/: Spec.hs
src/schema-gen/test-streaming/: Spec.hs
src/tasty-streaming/: README.md
src/tasty-streaming/schema/: streaming-events.schema.json
src/testing-interface/: README.md  convex-testing-interface.cabal
src/testing-interface/lib/Convex/: TestingInterface.hs
src/testing-interface/test/: AikenBankSpec.hs  AikenHelloWorldSpec.hs  AikenKingOfCardanoSpec.hs  AikenLendingSpec.hs  AikenMultisigTreasurySpec.hs  AikenMultisigTreasuryV2Spec.hs  AikenMultisigTreasuryV3Spec.hs  AikenPingPongSpec.hs  AikenPurchaseOfferSpec.hs  AikenSellNftSpec.hs  AikenTipJarSpec.hs  AikenTipJarV2Spec.hs  AikenVestingSpec.hs  BountySpec.hs  PingPongCoverageSpec.hs  PingPongSpec.hs  Spec.hs
src/testing-interface/test/data/: aiken-contracts-example.json
src/threat-model/: README.md  convex-threat-model.cabal
src/threat-model/lib/Convex/ThreatModel/: Core.hs  DSL.hs  TxModifier.hs  Validation.hs
src/threat-model/lib/Convex/ThreatModel/Threats/: DoubleSatisfaction.hs  LargeDatum.hs  LargeValue.hs  StateTransition.hs
src/threat-model/test/: Spec.hs
src/threat-model/test/ThreatModel/PingPong/: DoubleSatisfactionSpec.hs  LargeDatumSpec.hs  LargeValueSpec.hs  StateTransitionSpec.hs
src/use-cases/: convex-use-cases.cabal  hie.yaml
src/use-cases/test/Auction/: Scripts.hs
src/use-cases/test/Escrow/: Scripts.hs
src/use-cases/test/MultiPlayerPingPong/: Scripts.hs
src/use-cases/test/Vesting/: Scripts.hs
src/use-cases/test/Vesting/Spec/: Unit.hs
(+18 files in other folders)
