cabal-version: 3.0
name:          convex-schema-gen
version:       0.1.0.0
synopsis:      JSON Schema generator for sc-tools streaming events
license:       Apache-2.0
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    GADTs
    ImportQualifiedPost
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications

library
  import:          lang
  hs-source-dirs:  lib
  exposed-modules: Convex.SchemaGen
  build-depends:
    , aeson
    , base                       >=4.14.0
    , convex-tasty-streaming
    , convex-testing-interface
    , insert-ordered-containers
    , lens
    , openapi3                   >=3.2    && <3.3
    , text

executable gen-schema
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aeson-pretty
    , base               >=4.14.0
    , bytestring
    , convex-schema-gen

test-suite convex-schema-gen-streaming-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test-streaming
  main-is:        Spec.hs
  build-depends:
    , base                    >=4.14.0
    , convex-tasty-streaming
    , tasty
    , tasty-hunit

test-suite convex-schema-gen-plain-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test-plain
  main-is:        Spec.hs
  build-depends:
    , base         >=4.14.0
    , tasty
    , tasty-hunit
